--- a/gastronomy.html
+++ b/gastronomy.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <title>Camuy</title>
 </head>
 <body>
@@ -24,6 +26,59 @@
             </div>
         </section>
     </main>
+    <footer class="footer-distributed">
+
+			<div class="footer-left">
+
+                <img src="/images/logo.svg" style="height: 50px" alt="">
+
+				<p class="footer-links">
+					<a href="#">CCOM4305</a>
+					-
+					<a href="#">MB0</a>
+					·
+					<a href="#">Primer Semestre 2018-2019</a>
+				</p>
+
+				<p class="footer-company-name">CamuyGYM &copy; 2018</p>
+			</div>
+
+			<div class="footer-center">
+
+				<div>
+					<i class="fa fa-map-marker"></i>
+					<p><span>110 Cll Amador Brall</span>  Camuy, PR 00627</p>
+				</div>
+
+				<div>
+					<i class="fa fa-user"></i>
+					<p><span>Jonathan Nieves</span></p>
+				</div>
+
+				<div>
+					<i class="fa fa-user"></i>
+					<p><span>Brian Aleman</span></p>
+				</div>
+
+			</div>
+
+			<div class="footer-right">
+
+				<p class="footer-company-about">
+				</p>
+
+				<div class="footer-icons">
+
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="https://github.com/CCOM4305/CamuyCss"><i class="fa fa-github"></i></a>
+
+				</div>
+
+			</div>
+
+		</footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>
         $(function() {
